--- a/PracticaMovimiento/MainWindow.xaml
+++ b/PracticaMovimiento/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Canvas>
-        <Canvas Visibility="Visible" Name="miCanvas" KeyDown="miCanvas_KeyDown" Focusable="True">
+        <Canvas Visibility="Visible" Name="miCanvas" KeyDown="miCanvas_KeyDown" KeyUp="miCanvas_KeyUp" Focusable="True">
             <Image Name="imgWaluigi" Source="Waluigi.png" Canvas.Left="366" Canvas.Top="280" Height="111" Width="61"></Image>
             <Image Name="imgAT" Source="AT.png" Width="87" Canvas.Left="663" Canvas.Top="149" RenderTransformOrigin="0.5,0.5" Height="87">
                 <Image.RenderTransform>
@@ -24,7 +24,9 @@
             <TextBlock x:Name="lblColision" Canvas.Left="10" TextWrapping="Wrap" Text="No hay colisión" Canvas.Top="52"/>
         </Canvas>
         <Canvas Name="canvasGameOver" Visibility="Collapsed">
-            <TextBlock Text="Game Over" Canvas.Left="224" Canvas.Top="154" Height="105" Width="370" FontSize="72" Foreground="#FFCF0C0C" />
+            <TextBlock Text="Game Over" Canvas.Left="220" Canvas.Top="97" Height="105" Width="370" FontSize="72" Foreground="Red" />
+            <TextBlock Canvas.Left="124" TextWrapping="Wrap" Text="Waluigi es un Assist Trophy" Canvas.Top="236" FontSize="48" Foreground="#FF4200F3"/>
         </Canvas>
+
     </Canvas>
 </Window>
